--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Coda+Caption&family=Comfortaa&family=Lobster&family=Ubuntu:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Coda+Caption:wght@800&family=Comfortaa&family=Lobster&family=Ubuntu:wght@400;700&display=swap");
 ::-webkit-scrollbar {
-  width: 0.6em;
+  width: 0.5em;
 }
 
 ::-webkit-scrollbar-track {
@@ -36,25 +36,33 @@ main {
   position: relative;
 }
 
+.caveat {
+  font-family: "Caveat" !important;
+  font-size: 1.5em;
+  margin-top: 5px;
+}
+
 #Header {
   font-size: 18px;
-  padding: 200px 0 50px 0;
+  padding: 150px 0 50px 0;
 }
 #Header .contenedor {
   display: flex;
   justify-content: space-between;
   align-items: center;
   line-height: 1.5em;
+  gap: 50px;
 }
 #Header .contenedor .text-box {
-  width: 700px;
+  width: 50%;
 }
 #Header .contenedor .text-box .texts {
   padding: 10px 0;
   font-size: 1.1em;
 }
 #Header .contenedor .text-box .texts .text {
-  height: 450px;
+  height: 400px;
+  display: none;
 }
 #Header .contenedor .text-box .tabs {
   margin: 30px 0 20px 0;
@@ -80,48 +88,18 @@ main {
   background: rgba(255, 255, 255, 0.5294117647);
 }
 #Header .contenedor .tech-box {
-  width: 850px;
-  min-width: 850px;
+  width: 50%;
 }
 #Header .contenedor .tech-box .title {
   text-align: center;
-  margin-bottom: 40px;
-}
-#Header .contenedor .tech-box .techs {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: end;
-  position: relative;
-}
-#Header .contenedor .tech-box .techs .logo {
-  margin: 10px;
-  width: 220px;
-  height: 80px;
-  background-color: #fff;
-  padding: 10px;
-  border-radius: 5px;
-  box-sizing: content-box;
-  transition: all 0.3s;
-  display: grid;
-  place-items: center;
-  position: relative;
-}
-#Header .contenedor .tech-box .techs .logo img {
-  width: 60px;
-  min-width: 60px;
-  display: block;
-  margin: auto;
-}
-#Header .contenedor .tech-box .techs .logo:hover {
-  transform: translateY(-3px);
-  position: relative;
-  z-index: 1;
+  margin-bottom: 30px;
 }
 #Header .anim-text {
   background: linear-gradient(90deg, #E04143, #AA3F79);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: bold;
+  font-size: 2.5em !important;
 }
 #Header .domain {
   font-size: 2.5em !important;
@@ -138,6 +116,102 @@ main {
   line-height: 1.2em;
 }
 
+#Logos {
+  width: 520px;
+  margin: 20px auto;
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+#Logos::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  pointer-events: none;
+  box-shadow: inset 20px 0 15px #0E0E0E, inset -20px 0 15px #0E0E0E;
+  z-index: 2;
+}
+#Logos .logo-cont {
+  display: flex;
+}
+#Logos .logo-cont .logo-box {
+  display: flex;
+  margin: 20px 0;
+}
+#Logos .logo-cont .logo {
+  width: 130px;
+  display: flex;
+  justify-content: center;
+  flex-shrink: 0;
+}
+#Logos .logo-cont .logo img {
+  width: 80px;
+  transition: transform 0.3s;
+}
+#Logos .logo-cont .logo img:hover {
+  transform: translateY(-2px);
+}
+
+@media (max-width: 1150px) {
+  #Logos {
+    width: 390px;
+  }
+}
+@media (max-width: 1024px) {
+  #Logos {
+    width: 90%;
+    margin: auto;
+  }
+  #Logos::before {
+    content: none;
+  }
+  #Logos .logo-cont:nth-child(2) {
+    display: none !important;
+  }
+  #Logos .logo-cont .logo-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+    width: 100%;
+    gap: 10px;
+    transform: translate(0) !important;
+  }
+  #Logos .logo-cont .logo-box:nth-child(2) {
+    display: none;
+  }
+  #Logos .logo-cont .logo-box .logo {
+    background-color: rgb(46, 46, 46);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 5px;
+    width: auto;
+    border-radius: 5px;
+    transition: all 0.2s;
+    cursor: pointer;
+  }
+  #Logos .logo-cont .logo-box .logo:hover {
+    transform: translateY(-2px);
+  }
+  #Logos .logo-cont .logo-box .logo img {
+    width: 25px;
+  }
+  #Logos .logo-cont .logo-box .logo img:hover {
+    transform: translateY(0);
+  }
+  #Logos .logo-cont .logo-box .logo p {
+    text-transform: capitalize;
+    font-size: 1.1em;
+  }
+}
+@media (min-width: 1024px) {
+  #Logos .logo-cont .logo-box .logo > p {
+    display: none;
+  }
+}
 #CV a {
   display: inline-block;
   text-decoration: none;
@@ -159,19 +233,51 @@ main {
   background: linear-gradient(90deg, #E04143, #AA3F79) !important;
 }
 
-#Projects {
-  margin-top: 100px;
-}
-#Projects .title {
-  margin-bottom: 50px;
-}
-#Projects .title span {
+.titleIcons {
   font-size: 1.3em;
   display: block;
 }
-#Projects .title span i {
+.titleIcons i {
   font-size: 1.3em;
   margin-right: 2px;
+}
+
+#Certifications {
+  margin-top: 100px;
+}
+#Certifications .title {
+  margin-bottom: 50px;
+}
+#Certifications .title span i {
+  margin-right: 10px;
+}
+#Certifications .contenedor .box {
+  padding: 20px;
+  transition: transform 0.3s;
+  border-radius: 5px;
+  background-color: #1B1B32;
+  display: block;
+  text-align: center;
+  width: 300px;
+  text-decoration: none;
+  color: white;
+}
+#Certifications .contenedor .box img {
+  width: 150px;
+  margin-bottom: 5px;
+}
+#Certifications .contenedor .box p {
+  font-size: 1.2em;
+}
+#Certifications .contenedor .box:hover {
+  transform: translateY(-3px);
+}
+
+#Projects {
+  margin-top: 50px;
+}
+#Projects .title {
+  margin-bottom: 50px;
 }
 #Projects .contenedor {
   display: grid;
@@ -353,8 +459,8 @@ main {
 }
 
 #Footer {
-  height: 200px;
-  background-color: #171717;
+  height: 100px;
+  background-color: #0E0E0E;
   margin-top: 150px;
 }
 
@@ -560,14 +666,14 @@ main {
 
 .click-project {
   position: fixed;
-  display: none;
+  display: block;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.9);
   z-index: 20 !important;
-  opacity: 0;
+  opacity: 1;
   transition: all 0.3s;
 }
 .click-project .project-box {
@@ -578,11 +684,11 @@ main {
   padding: 0 30px;
   transform: translate(-50%, -50%);
   width: 250px;
-  height: 450px;
+  height: 400px;
   background-color: #171717;
   box-shadow: 0 0 5px 7px rgba(0, 0, 0, 0.3);
   opacity: 0;
-  transition: all 0.3s;
+  transition: all 0.2s;
 }
 .click-project .project-box .cerrar {
   position: absolute;
@@ -669,37 +775,4 @@ main {
 .g-recaptcha {
   margin: auto;
   width: 304px;
-}
-
-/* --------------- TECH COLORS --------------- */
-.html {
-  background-color: #ff6625 !important;
-}
-
-.css {
-  background-color: #1aa7e4 !important;
-}
-
-.js {
-  background-color: #a8930c !important;
-}
-
-.react {
-  background-color: #d8f6ff !important;
-}
-
-.git {
-  background-color: #8f1d0c !important;
-}
-
-.figma {
-  background-color: #292827 !important;
-}
-
-.bootstrap {
-  background-color: #cdbfe4 !important;
-}
-
-.tailwind {
-  background-color: #007987 !important;
 }/*# sourceMappingURL=style.css.map */
