--- a/styles/mq.css
+++ b/styles/mq.css
@@ -1,16 +1,3 @@
-@media (max-width: 1600px) {
-  #Header .tech-box {
-    width: 750px !important;
-    min-width: 750px !important;
-  }
-  #Header .tech-box .logo {
-    width: 180px !important;
-  }
-  #Header .tech-box .logo img {
-    width: 50px !important;
-    min-width: 50px !important;
-  }
-}
 @media (max-width: 1400px) {
   #Contacto .contenedor .svg img {
     width: 550px;
@@ -18,18 +5,6 @@
   #Contacto .contenedor .form-box #Form {
     margin: auto;
     width: 80%;
-  }
-  #Header .tech-box {
-    width: 600px !important;
-    min-width: 600px !important;
-  }
-  #Header .tech-box .logo {
-    width: 130px !important;
-    height: 110px !important;
-  }
-  #Header .tech-box .logo img {
-    width: 50px !important;
-    min-width: 50px !important;
   }
 }
 @media (max-width: 1200px) {
@@ -39,18 +14,6 @@
   #Contacto .contenedor .form-box #Form {
     margin: auto;
     width: 80%;
-  }
-  #Header .tech-box {
-    width: 450px !important;
-    min-width: 450px !important;
-  }
-  #Header .tech-box .logo {
-    width: 90px !important;
-    height: 90px !important;
-  }
-  #Header .tech-box .logo img {
-    width: 40px !important;
-    min-width: 40px !important;
   }
 }
 @media (max-width: 1024px) {
@@ -102,22 +65,8 @@
   #Header .contenedor .text-box .texts .text {
     height: auto;
   }
-  #Header .contenedor .tech-box {
-    margin-top: 80px;
-  }
-  #Header .contenedor .tech-box .techs {
-    justify-content: center;
-  }
-  #Header .contenedor .tech-box .techs .logo {
-    width: 25% !important;
-    cursor: pointer;
-  }
-  #Header .contenedor .tech-box .techs .logo:hover {
-    transform: translate(0);
-  }
-  #Header .contenedor .tech-box .techs .logo img {
-    width: 60px !important;
-    min-width: 60px !important;
+  #Header .contenedor .text-box .tabs {
+    text-align: center;
   }
   .hover-logo-s {
     display: block;
@@ -152,17 +101,13 @@
     min-width: 300px;
     margin: auto;
   }
+  #Certifications .contenedor .box {
+    margin: auto;
+  }
 }
 @media (max-width: 560px) {
   #Header .contenedor .domain {
     font-size: 2.5em !important;
-  }
-  #Header .contenedor .tech-box {
-    margin-top: 80px;
-  }
-  #Header .contenedor .tech-box .techs .logo {
-    width: 100% !important;
-    margin: 15px 0;
   }
   .hover-logo-s .box-logo {
     width: 90% !important;
