--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Coda+Caption&family=Comfortaa&family=Lobster&family=Ubuntu:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Coda+Caption:wght@800&family=Comfortaa&family=Lobster&family=Ubuntu:wght@400;700&display=swap');
 
 ::-webkit-scrollbar {
-    width: .6em;
+    width: .5em;
 }
 
 ::-webkit-scrollbar-track {
@@ -37,21 +37,29 @@ main {
     position: relative;
 }
 
+.caveat {
+    font-family: 'Caveat' !important;
+    font-size: 1.5em;
+    margin-top: 5px;
+}
+
 #Header {
     font-size: 18px;
-    padding: 200px 0 50px 0;
+    padding: 150px 0 50px 0;
     .contenedor {
         display: flex;
         justify-content: space-between;
         align-items: center;
         line-height: 1.5em;
+        gap: 50px;
         .text-box {
-            width: 700px;
+            width: 50%;
             .texts {
                 padding: 10px 0;
                 font-size: 1.1em;
                 .text {
-                    height: 450px;
+                    height: 400px;
+                    display: none;
                 }
             }
             .tabs {
@@ -79,41 +87,10 @@ main {
             }
         }
         .tech-box {
-            width: 850px;
-            min-width: 850px;
+            width: 50%;
             .title {
                 text-align: center;
-                margin-bottom: 40px;
-            }
-            .techs {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: end;
-                position: relative;
-                .logo {
-                    margin: 10px;
-                    width: 220px;
-                    height: 80px;
-                    background-color: #fff;
-                    padding: 10px;
-                    border-radius: 5px;
-                    box-sizing: content-box;
-                    transition: all .3s;
-                    display: grid;
-                    place-items: center;
-                    position: relative;
-                    img {
-                        width: 60px;
-                        min-width: 60px;
-                        display: block;
-                        margin: auto;
-                    }
-                    &:hover {
-                        transform: translateY(-3px);
-                        position: relative;
-                        z-index: 1;
-                    }
-                }
+                margin-bottom: 30px;
             }
         }
     }
@@ -122,6 +99,7 @@ main {
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         font-weight: bold;
+        font-size: 2.5em !important;
     }
     .domain {
         font-size: 2.5em !important;
@@ -136,6 +114,118 @@ main {
         font-size: 2em;
         font-family: 'Lobster';
         line-height: 1.2em;
+    }
+}
+
+$logoWidth: 130px;
+
+#Logos {
+    width: calc($logoWidth * 4);
+    margin: 20px auto;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        pointer-events: none;
+        box-shadow: inset 20px 0 15px #0E0E0E,
+        inset -20px 0 15px #0E0E0E;
+        z-index: 2;
+    }
+
+    .logo-cont {
+        display: flex;
+        .logo-box {
+            display: flex;
+            margin: 20px 0;
+        }
+        .logo {
+            width: $logoWidth;
+            display: flex;
+            justify-content: center;
+            flex-shrink: 0;
+            img {
+                width: 80px;
+                transition: transform .3s;
+                &:hover {
+                    transform: translateY(-2px);
+                }
+            }
+        }
+    }
+}
+
+
+// MQ
+
+@media (max-width: 1150px) {
+    #Logos {
+        width: calc($logoWidth * 3);
+    }
+}
+
+
+@media (max-width: 1024px) {
+    #Logos {
+        width: 90%;
+        margin: auto;
+        &::before {
+            content: none;
+        }
+        .logo-cont {
+            &:nth-child(2) {
+                display: none !important;
+            }
+            .logo-box {
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+                width: 100%;
+                gap: 10px;
+                transform: translate(0) !important;
+                &:nth-child(2) {
+                    display: none;
+                }
+                .logo {
+                    background-color: rgb(46, 46, 46);
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    padding: 5px;
+                    width: auto;
+                    border-radius: 5px;
+                    transition: all .2s;
+                    cursor: pointer;
+                    &:hover {
+                        transform: translateY(-2px);
+                    }
+                    img {
+                        width: 25px;
+                        &:hover {
+                            transform: translateY(0);
+                        }
+                    }
+                    p {
+                        text-transform: capitalize;
+                        font-size: 1.1em;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    #Logos .logo-cont .logo-box {
+        .logo > p {
+            display: none;
+        }
     }
 }
 
@@ -163,20 +253,57 @@ main {
     }
 }
 
+.titleIcons {
+    font-size: 1.3em;
+    display: block;
+    i {
+        font-size: 1.3em;
+        margin-right: 2px;
+    }
+
+}
 
 
-#Projects {
+#Certifications {
     margin-top: 100px;
     .title {
         margin-bottom: 50px;
         span {
-            font-size: 1.3em;
-            display: block;
             i {
-                font-size: 1.3em;
-                margin-right: 2px;
+                margin-right: 10px;
             }
         }
+    }
+    .contenedor {
+        .box {
+            padding: 20px;
+            transition: transform .3s;
+            border-radius: 5px;
+            background-color: #1B1B32;
+            display: block;
+            text-align: center;
+            width: 300px;
+            text-decoration: none;
+            color: white;
+            img {
+                width: 150px;
+                margin-bottom: 5px;
+            }
+            p {
+                font-size: 1.2em;
+            }
+            &:hover {
+                transform: translateY(-3px);
+            }
+        }
+    }
+}
+
+
+#Projects {
+    margin-top: 50px;
+    .title {
+        margin-bottom: 50px;
     }
     .contenedor {
         display: grid;
@@ -362,8 +489,8 @@ main {
 }
 
 #Footer {
-    height: 200px;
-    background-color: #171717;
+    height: 100px;
+    background-color: #0E0E0E;
     margin-top: 150px;
 }
 
@@ -598,14 +725,14 @@ main {
 
 .click-project {
     position: fixed;
-    display: none;
+    display: block;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.9);
     z-index: 20 !important;
-    opacity: 0;
+    opacity: 1;
     transition: all .3s;
     .project-box {
         position: absolute;
@@ -615,11 +742,11 @@ main {
         padding: 0 30px;
         transform: translate(-50%,-50%);
         width: 250px;
-        height: 450px;
+        height: 400px;
         background-color: #171717;
         box-shadow: 0 0 5px 7px rgba(0, 0, 0, 0.3);
         opacity: 0;
-        transition: all .3s;
+        transition: all .2s;
         .cerrar {
             position: absolute;
             top: 10px;
@@ -713,49 +840,4 @@ main {
     width: 304px;
 }
 
-
-
-/* --------------- TECH COLORS --------------- */
-
-
-
-
-
-
-
-
-
-
-
-.html {
-    background-color: #ff6625 !important;
-}
-
-.css {
-    background-color: #1aa7e4 !important;
-}
-
-.js {
-    background-color: #a8930c !important;
-}
-
-.react {
-    background-color: #d8f6ff !important;
-}
-
-.git {
-    background-color: #8f1d0c !important;
-}
-
-.figma {
-    background-color: #292827 !important;
-}
-
-.bootstrap {
-    background-color: #cdbfe4 !important;
-}
-
-.tailwind {
-    background-color: #007987 !important;
-}
 
