--- a/styles/mq.scss
+++ b/styles/mq.scss
@@ -17,7 +17,13 @@
 }
 
 
+
 @media (max-width:1200px) {
+    #Header {
+        .contenedor .text-box .texts .text {
+            height: 480px ;
+        }
+    }
     #Contacto {
         .contenedor {
             .svg {
@@ -35,6 +41,7 @@
     }
 }
   
+
 
 @media (max-width:1024px) {
     #Social {
@@ -70,7 +77,6 @@
         }
     }
     #Header {
-        padding: 150px 0 50px 0;
         .contenedor {
             .domain {
                 text-align: center;
@@ -81,6 +87,20 @@
                 min-width: 100% !important;
             }
             .text-box {
+                .tabs {
+                    display: flex;
+                    justify-content: center;
+                    width: 100%;
+                    overflow-x: scroll;
+                    -ms-overflow-style: none;  /* IE and Edge */
+                    scrollbar-width: none;
+                    &::-webkit-scrollbar {
+                        display: none;
+                    }
+                    & > * {
+                        flex-shrink: 0;
+                    }
+                }
                 .texts {
                     padding: 10px 0;
                     font-size: 1.1em;
@@ -121,6 +141,8 @@
     }
 }
 
+
+
 @media (max-width:700px) {
     #Contacto {
         width: 100%;
@@ -146,6 +168,7 @@
         }
     }
 }
+
 
 
 @media (max-width:560px) {
@@ -200,6 +223,11 @@
         }
     }
     #Header {
+        .text-box {
+            .tabs {
+                justify-content: start !important;
+            }
+        }
         .contenedor {
             .domain {
                 font-size: 2em !important;
@@ -207,6 +235,8 @@
         }
     }
 }
+
+
 
 @media (max-width:410px) {
     .click-project {
@@ -222,7 +252,7 @@
     #Header {
         .contenedor {
             .domain {
-                font-size: 1.8em !important;
+                font-size: 1.6em !important;
             }
             .tech-box {
                 margin-top: 80px;
