--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,9 +21,6 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-ul {
-    list-style-type: none;
-}
 
 body {
     background-color: #0E0E0E;
@@ -32,7 +29,7 @@ body {
 }
 
 main {
-    margin: auto;
+    margin: 150px auto;
     width: 90%;
     position: relative;
 }
@@ -45,7 +42,6 @@ main {
 
 #Header {
     font-size: 18px;
-    padding: 150px 0 50px 0;
     .contenedor {
         display: flex;
         justify-content: space-between;
@@ -60,6 +56,9 @@ main {
                 .text {
                     height: 400px;
                     display: none;
+                    .list {
+                        margin-left: 50px;
+                    }
                 }
             }
             .tabs {
@@ -135,8 +134,8 @@ $logoWidth: 130px;
         left: 0;
         right: 0;
         pointer-events: none;
-        box-shadow: inset 20px 0 15px #0E0E0E,
-        inset -20px 0 15px #0E0E0E;
+        box-shadow: inset 20px 0px 15px #0E0E0E,
+        inset -20px 0px 15px #0E0E0E;
         z-index: 2;
     }
 
@@ -152,7 +151,7 @@ $logoWidth: 130px;
             justify-content: center;
             flex-shrink: 0;
             img {
-                width: 80px;
+                width: 85px;
                 transition: transform .3s;
                 &:hover {
                     transform: translateY(-2px);
@@ -300,8 +299,11 @@ $logoWidth: 130px;
 }
 
 
+
 #Projects {
-    margin-top: 50px;
+    & > * {
+        margin-top: 100px;
+    }
     .title {
         margin-bottom: 50px;
     }
@@ -452,14 +454,13 @@ $logoWidth: 130px;
                     margin: 20px auto;
                     display: block;
                     width: 90%;
-                    padding: 15px;
+                    padding: 12px;
                     background-color: #504573;
                     border: none;
                     border-radius: 10px;
                     font-size: 1em;
                     font-weight: bold;
                     color: #e8e8e8;
-                    text-transform: uppercase;
                     letter-spacing: 1px;
                     &::placeholder {
                         color: #969696;
@@ -469,11 +470,8 @@ $logoWidth: 130px;
                     }
                 }
                 textarea {
-                    height: 150px;
-                    min-height: 150px;
-                    max-height: 150px;
-                    min-width: 90%;
-                    max-width: 90%;
+                    height: 100px;
+                    resize: none;
                     line-height: 1.2em;
                 }
                 #submit {
@@ -488,11 +486,7 @@ $logoWidth: 130px;
     }
 }
 
-#Footer {
-    height: 100px;
-    background-color: #0E0E0E;
-    margin-top: 150px;
-}
+
 
 
 
@@ -841,3 +835,202 @@ $logoWidth: 130px;
 }
 
 
+/* Google Font Import - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+
+.toast{
+    position: fixed;
+    z-index: 9999;
+    top: 25px;
+    right: 30px;
+    border-radius: 12px;
+    background: #fff;
+    padding: 20px 35px 20px 25px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+    border-left: 6px solid var(--toast-color);
+    overflow: hidden;
+    transform: translateX(calc(100% + 30px));
+    transition: transform 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.35);
+}
+
+.activeToast{
+    transform: translateX(0%) !important;
+}
+
+.toast .toast-content{
+    display: flex;
+    align-items: center;
+}
+
+.toast-content .check{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 35px;
+    width: 35px;
+    background-color: var(--toast-color);
+    color: #fff;
+    font-size: 20px;
+    border-radius: 50%;
+}
+
+.toast-content .message{
+    display: flex;
+    flex-direction: column;
+    margin: 0 20px;
+}
+
+.message .text{
+    font-size: 20px;
+    font-weight: 400;;
+    color: #666666;
+}
+
+.message .text.text-1{
+    font-weight: 600;
+    color: #333;
+}
+
+.toast .close{
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    padding: 5px;
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.toast .close:hover{
+    opacity: 1;
+}
+
+.toast .progress{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 3px;
+    width: 100%;
+    background: #ddd;
+}
+
+.toast .progress:before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--toast-color);
+}
+
+.progress.active:before{
+    animation: progress 3s linear forwards;
+}
+
+@keyframes progress {
+    100%{
+        right: 100%;
+    }
+}
+
+
+.toast.active ~ button{
+    pointer-events: none;
+}
+
+
+
+// Loader
+.loader {
+    z-index: 9999;
+    position: fixed;
+    top: 25px;
+    right: 30px;
+    width: 70px;
+    height: 70px;
+    border-radius: 10px;
+  }
+  
+  .loader div {
+    width: 8%;
+    height: 24%;
+    background: rgb(128, 128, 128);
+    position: absolute;
+    left: 50%;
+    top: 30%;
+    opacity: 0;
+    border-radius: 50px;
+    box-shadow: 0 0 3px rgba(0,0,0,0.2);
+    animation: fade458 1s linear infinite;
+  }
+  
+  @keyframes fade458 {
+    from {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0.25;
+    }
+  }
+  
+  .loader .bar1 {
+    transform: rotate(0deg) translate(0, -130%);
+    animation-delay: 0s;
+  }
+  
+  .loader .bar2 {
+    transform: rotate(30deg) translate(0, -130%);
+    animation-delay: -1.1s;
+  }
+  
+  .loader .bar3 {
+    transform: rotate(60deg) translate(0, -130%);
+    animation-delay: -1s;
+  }
+  
+  .loader .bar4 {
+    transform: rotate(90deg) translate(0, -130%);
+    animation-delay: -0.9s;
+  }
+  
+  .loader .bar5 {
+    transform: rotate(120deg) translate(0, -130%);
+    animation-delay: -0.8s;
+  }
+  
+  .loader .bar6 {
+    transform: rotate(150deg) translate(0, -130%);
+    animation-delay: -0.7s;
+  }
+  
+  .loader .bar7 {
+    transform: rotate(180deg) translate(0, -130%);
+    animation-delay: -0.6s;
+  }
+  
+  .loader .bar8 {
+    transform: rotate(210deg) translate(0, -130%);
+    animation-delay: -0.5s;
+  }
+  
+  .loader .bar9 {
+    transform: rotate(240deg) translate(0, -130%);
+    animation-delay: -0.4s;
+  }
+  
+  .loader .bar10 {
+    transform: rotate(270deg) translate(0, -130%);
+    animation-delay: -0.3s;
+  }
+  
+  .loader .bar11 {
+    transform: rotate(300deg) translate(0, -130%);
+    animation-delay: -0.2s;
+  }
+  
+  .loader .bar12 {
+    transform: rotate(330deg) translate(0, -130%);
+    animation-delay: -0.1s;
+  }
